--- a/src/Assets/scss/_connect.scss
+++ b/src/Assets/scss/_connect.scss
@@ -28,6 +28,56 @@
         &.plug {
           margin-right: 1.5em;
         }
+
+      }
+
+      @include media('max', 'sm') {
+        flex-wrap: wrap;
+
+        button {
+          width: 100%;
+        }
+        button.plug {
+          margin-bottom: 1em;
+          margin-right: 0;
+        }
+      }
+
+    }
+
+
+    @include media('max', 'xl') {
+      .big_text {
+        font-size: 3.5em;
+        margin-right: 1em;
+        line-height: 1.2em;
+      }
+      .small_text {
+        font-size: 1.4em;
+        margin-right: 30px;
+      }
+    }
+
+    @include media('max', 'md') {
+      .big_text {
+        margin-right: 0;
+      }
+      .small_text {
+        margin-right: 0;
+      }
+    }
+    @include media('max', 'sm') {
+      .big_text {
+        font-size: 3em;
+        line-height: 1em;
+      }
+      .small_text {
+        font-size: 1em;
+      }
+    }
+    @include media('max', 'xs') {
+      .big_text {
+        font-size: 2em;
       }
     }
   }
@@ -71,28 +121,116 @@
           object-fit: contain;
           display: block;
         }
+
+        @include media('max', 'xxl') {
+          height: 290px;
+          width: 290px;
+        }
+
+        @include media('max', 'xl') {
+          height: 240px;
+          width: 240px;
+        }
+        @include media('max', 'lg') {
+          height: 200px;
+          width: 200px;
+        }
+
       }
+
+      @include media('max', 'xxl') {
+        &:nth-child(1) {
+          top: 5%;
+          left: -10%;
+          z-index: 55;
+        }
+
+        &:nth-child(2) {
+          top: 10%;
+          right: 0;
+          z-index: 54;
+        }
+
+        &:nth-child(3) {
+          bottom: 5%;
+          left: 10%;
+          z-index: 53;
+        }
+      }
+
+      @include media('max', 'xl') {
+        &:nth-child(1) {
+          top: 0;
+          left: -10%;
+          z-index: 55;
+        }
+
+        &:nth-child(2) {
+          top: 10%;
+          right: 5%;
+          z-index: 54;
+        }
+
+        &:nth-child(3) {
+          bottom: 0;
+          left: 10%;
+          z-index: 53;
+        }
+      }
+
+      @include media('max', 'lg') {
+        &:nth-child(1) {
+          top: 20%;
+          left: -10%;
+          z-index: 55;
+        }
+
+        &:nth-child(2) {
+          top: 25%;
+          right: -5%;
+          z-index: 54;
+        }
+
+        &:nth-child(3) {
+          bottom: 10%;
+          left: 15%;
+          z-index: 53;
+        }
+      }
+    }
+
+    @include media('max', 'md') {
+      display: none;
     }
   }
 }
 
 #benefits_block {
   margin-top: 10em;
-  
-  .button_inner button{
+
+  .button_inner button {
     font-size: 1.2em;
+    width: auto;
+    margin-right: auto;
+    margin-left: auto;
     text-transform: none;
     letter-spacing: 1.5px;
+
+    @include media('max', 'sm') {
+      font-size: 1em;
+      width: 100%;
+    }
   }
 
   .cards_inner {
-    margin-top: 5em;
+    flex-wrap: wrap;
+    display: flex;
     justify-content: space-between;
 
     .card {
+      margin-top: 2em;
       width: 23rem;
       padding: 3em;
-      margin-left: 5em;
       border-radius: 10%;
       text-align: center;
 
@@ -104,6 +242,62 @@
 
       &:first-child {
         margin-left: 0;
+      }
+
+      @include media('max', 'xxl') {
+        width: 20rem;
+
+        & .card-img-top {
+          width: 10rem;
+          margin-bottom: 1em;
+        }
+      }
+
+      @include media('max', 'xl') {
+        width: 16rem;
+        padding: 2em;
+        
+        & .card-img-top {
+          width: 8rem;
+        }
+
+        & .card-body .card-text {
+          font-size: .9em;
+        }
+      }
+
+      @include media('max', 'lg') {
+        width: 47%;
+
+        & .card-img-top {
+          width: 8rem;
+        }
+
+        & .card-body .card-text {
+          font-size: .9em;
+        }
+
+        &:first-child {
+          margin-left: 0;
+        }
+      }
+
+      @include media('max', 'sm') {
+        width: 100%;
+        padding: 3em;
+
+        & .card-img-top {
+          width: 10rem;
+          margin-bottom: 2em;
+        }
+
+        & .card-body .card-text {
+          font-size: .9em;
+        }
+
+        &:first-child {
+          margin-left: 0;
+        }
       }
 
     }
