--- a/src/Assets/scss/main.scss
+++ b/src/Assets/scss/main.scss
@@ -16,8 +16,8 @@ body, body > * {
   min-width: 64px;
   box-sizing: border-box;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  font-weight: 500;
   line-height: 1.75;
+  font-weight: bold;
 
   &:hover, &:focus {
     border: 1px solid #00d092;
