--- a/src/Assets/scss/_dashboard.scss
+++ b/src/Assets/scss/_dashboard.scss
@@ -163,6 +163,11 @@
       width: 350px;
       height: 350px;
 
+      &.hidden {
+        pointer-events: none;
+        opacity: 0;
+      }
+
       .card {
         width: 100%;
         height: 100%;
@@ -207,6 +212,12 @@
         height: 285px;
       }
 
+      @include media('max', 'lg') {
+        &.hidden {
+          display: none;
+        }
+      }
+
       @include media('max', 'md') {
         width: 230px;
         height: 230px;
@@ -220,7 +231,7 @@
         width: 100%;
         height: 300px;
 
-        .card  .info_card {
+        .card .info_card {
           width: 130px !important;
           height: 50px !important;
           top: -10px !important;
