--- a/src/Assets/scss/_dashboard.scss
+++ b/src/Assets/scss/_dashboard.scss
@@ -49,8 +49,10 @@
   }
 
   .discord_section {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    
+    &.hidden{
+      display: none;
+    }
 
     .discord_inner {
       text-align: center;
@@ -139,6 +141,7 @@
 
 #list_dash {
   position: relative;
+    margin-top: 30px;
   padding: 50px 0 30px;
 
   &:before {
