--- a/src/Assets/scss/main.scss
+++ b/src/Assets/scss/main.scss
@@ -4,8 +4,8 @@
 @import "dashboard";
 
 body, body > * {
-  font-family: "Poppins", sans-serif;
-  background-color: #fafafa;
+  font-family: "Montserrat", sans-serif;
+  background-color: #ffffff;
 }
 
 .btn {
