--- a/src/Assets/scss/_nav.scss
+++ b/src/Assets/scss/_nav.scss
@@ -1,8 +1,8 @@
 @import "variables";
 
 #navbar {
-  border-bottom: $white 1px solid;
-  background-color: #ffffff;
+  border-bottom: $white-gray 1px solid;
+  background-color: $white;
 
   & .container-fluid {
     @include media('min', 'md') {
@@ -50,11 +50,11 @@
 
 
       &:hover, &:active {
-        color: #02AAB0 !important;
-        background-color: #fff;
+        color: $green !important;
+        background-color: $white;
 
         svg path, svg circle {
-          fill: #02AAB0;
+          fill: $green;
         }
 
         .discord {
