--- a/src/Assets/scss/main.scss
+++ b/src/Assets/scss/main.scss
@@ -5,7 +5,7 @@
 
 body, body > * {
   font-family: "Montserrat", sans-serif;
-  background-color: #ffffff;
+  background-color: $white;
 }
 
 .btn {
@@ -18,8 +18,8 @@ body, body > * {
 }
 
 .btn-outline-primary {
-  border: 1px solid rgba(0, 208, 146, 0.5);
-  color: #00d092;
+  border: 1px solid $green;
+  color: $green;
   border-radius: 4px;
   text-transform: uppercase;
   font-size: 0.875rem;
@@ -30,35 +30,34 @@ body, body > * {
   font-weight: bold;
 
   &:hover, &:focus, &:active {
-    border: 1px solid #00d092;
+    border: 1px solid $green;
     background-color: rgba(0, 208, 146, 0.04);
-    color: #00d092;
+    color: $green;
     box-shadow: none !important;
   }
 }
 
 .btn-primary {
   font-weight: bold;
-  color: white;
-  background-color: #00b894;
+  color: $white;
+  background: $button-green-grad;
   padding: 6px 16px;
   font-size: 0.875rem;
   min-width: 64px;
   box-sizing: border-box;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   line-height: 1.75;
   border-radius: 4px;
   text-transform: uppercase;
   border: none;
 
   &:hover, &:focus {
-    background-color: rgb(0, 128, 103);
-    box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+    background: $button-green-grad;
   }
 
   &.disabled, &:disabled {
     color: white;
-    background-color: #00b894;
+    background-color: $green;
     cursor: not-allowed;
   }
 }
@@ -72,7 +71,7 @@ body, body > * {
 
   &:focus {
     box-shadow: none;
-    border-color: #00b894;
+    border-color: $green;
   }
 }
 
