--- a/src/Assets/scss/_connect.scss
+++ b/src/Assets/scss/_connect.scss
@@ -1,9 +1,11 @@
 @import "variables";
 
 #info_block {
+  position: relative;
   margin-top: 7rem;
 
   & .info_section {
+    position: relative;
     margin-top: 3rem;
 
     & .big_text {
@@ -11,28 +13,35 @@
       font-weight: 900;
       margin-right: 1.2em;
       text-transform: uppercase;
-      
-      & .green_text{
+
+      & .green_text {
         color: $green;
       }
     }
 
     & .small_text {
+      font-family: $dm_ff;
+      @include style_text(20px, 32px);
+      font-weight: 400;
       margin-top: 2rem;
-      font-size: 1.7em;
+      margin-right: 10rem;
     }
 
     & .buttons {
-      margin-top: 2.5em;
+      margin-top: 3.5rem;
 
       & button {
-        min-width: 170px;
+        padding: 10px;
         width: auto;
-        height: 50px;
         font-size: 1.1em;
 
         &.plug {
           margin-right: 1.5em;
+        }
+
+        & img {
+          width: 36px;
+          height: 36px;
         }
 
       }
@@ -49,6 +58,67 @@
         }
       }
 
+    }
+
+    & .description {
+      display: flex;
+      margin-top: 4rem;
+      z-index: 3;
+
+      & .stats {
+        margin-right: 2.5rem;
+
+        & .stats_count {
+          @include style_text(40px, 49px);
+          font-weight: 800;
+        }
+
+        & .stats_text {
+          @include style_text(20px, 24px);
+          font-family: $dm_ff;
+          font-weight: 400;
+        }
+      }
+    }
+
+    & .star_left {
+      position: absolute;
+      top: 15%;
+      left: -7%;
+    }
+
+    & .circle_top {
+      position: absolute;
+      top: -15%;
+      left: 27%;
+    }
+
+    & .circle_top_right {
+      position: absolute;
+      top: -10%;
+      right: 32%;
+    }
+
+    & .circle_bottom {
+      position: absolute;
+      bottom: 12%;
+      left: -10%;
+      z-index: 10;
+    }
+
+    & .dot_bottom {
+      position: absolute;
+      bottom: -30%;
+      left: -13%;
+      z-index: 10;
+    }
+
+    & .small_filter {
+      position: absolute;
+      top: 50%;
+      left: -36%;
+      z-index: 1;
+      transform: rotate(40deg);
     }
 
 
@@ -91,40 +161,78 @@
   & .img_section {
     position: relative;
 
+    & .star_center {
+      position: absolute;
+      top: 47%;
+      left: 50%;
+      z-index: 10;
+    }
+
+    & .star_right {
+      position: absolute;
+      top: 30%;
+      right: -10%;
+      z-index: 10;
+    }
+
     & .img_position {
       position: absolute;
 
       &:nth-child(1) {
-        top: 0;
-        left: -10%;
+        top: 10%;
+        left: 10%;
         z-index: 55;
+
+        .img_container {
+          height: 172px;
+          width: 232px;
+        }
       }
 
       &:nth-child(2) {
-        top: 10%;
-        right: -5%;
+        top: 0;
+        right: 5%;
         z-index: 54;
+
+        .img_container {
+          height: 264px;
+          width: 200px;
+        }
       }
 
       &:nth-child(3) {
-        bottom: 0;
+        bottom: 10%;
         left: 10%;
         z-index: 53;
+
+        .img_container {
+          height: 211px;
+          width: 183px;
+        }
+      }
+
+      &:nth-child(4) {
+        bottom: -15%;
+        right: 5%;
+        z-index: 53;
+
+        .img_container {
+          height: 292px;
+          width: 250px;
+        }
       }
 
       & .img_container {
-        position: relative;
-        height: 330px;
-        width: 330px;
 
         img {
+          border-radius: 8px;
           position: absolute;
           top: 0;
           left: 0;
           width: 100%;
           height: 100%;
           margin: 0 auto;
-          object-fit: contain;
+          object-fit: cover;
           display: block;
         }
 
@@ -145,63 +253,15 @@
       }
 
       @include media('max', 'xxl') {
-        &:nth-child(1) {
-          top: 5%;
-          left: -10%;
-          z-index: 55;
-        }
 
-        &:nth-child(2) {
-          top: 10%;
-          right: 0;
-          z-index: 54;
-        }
-
-        &:nth-child(3) {
-          bottom: 5%;
-          left: 10%;
-          z-index: 53;
-        }
       }
 
       @include media('max', 'xl') {
-        &:nth-child(1) {
-          top: 0;
-          left: -10%;
-          z-index: 55;
-        }
 
-        &:nth-child(2) {
-          top: 10%;
-          right: 5%;
-          z-index: 54;
-        }
-
-        &:nth-child(3) {
-          bottom: 0;
-          left: 10%;
-          z-index: 53;
-        }
       }
 
       @include media('max', 'lg') {
-        &:nth-child(1) {
-          top: 20%;
-          left: -10%;
-          z-index: 55;
-        }
 
-        &:nth-child(2) {
-          top: 25%;
-          right: -5%;
-          z-index: 54;
-        }
-
-        &:nth-child(3) {
-          bottom: 10%;
-          left: 15%;
-          z-index: 53;
-        }
       }
     }
 
@@ -209,10 +269,45 @@
       display: none;
     }
   }
+
+  & .big_filter {
+    width: 738px !important;
+    position: absolute;
+    bottom: -60%;
+    right: -10%;
+    z-index: 1;
+  }
 }
 
 #benefits_block {
-  margin-top: 10em;
+  padding-top: 2rem;
+  padding-bottom: 10rem;
+
+  & .icp_img {
+    position: relative;
+    width: 36px;
+    height: 36px;
+
+    img {
+      border-radius: 8px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      margin: 0 auto;
+      object-fit: cover;
+      display: block;
+    }
+  }
+
+  & .big_text {
+    @include style_text(28px, 36px);
+    text-transform: uppercase;
+    max-width: 520px;
+    margin-top: 1.5rem;
+    font-weight: 900;
+  }
 
   .button_inner button {
     font-size: 1.2em;
@@ -229,21 +324,60 @@
   }
 
   .cards_inner {
+    margin-top: 3.5rem;
     flex-wrap: wrap;
     display: flex;
     justify-content: space-between;
 
     .card {
-      margin-top: 2em;
-      width: 23rem;
-      padding: 3em;
-      border-radius: 10%;
+      background-color: $white;
+      margin-top: 1.5rem;
+      width: 21.5rem;
+      padding: 3rem 2.1rem 3rem 2.1rem;
       text-align: center;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+      border-radius: 14px;
+      border: none;
 
-      & .card-img-top {
-        border-radius: 100%;
-        width: 12rem;
-        margin: 0 auto 3em auto;
+      & .img_inner {
+        position: relative;
+
+        & .img_icon {
+          position: absolute;
+          top: 16%;
+          left: 50%;
+
+          .img {
+            position: relative;
+            width: 44px;
+            height: 44px;
+
+            img {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              margin: 0 auto;
+              object-fit: cover;
+              display: block;
+            }
+          }
+        }
+      }
+
+      & .card-title {
+        @include style_text(14px, 22px);
+        margin-top: 2.2rem;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+
+      & .card-text {
+        font-family: $dm_ff;
+        @include style_text(14px, 26px);
+        font-weight: 400;
+        margin-top: 1rem;
       }
 
       &:first-child {
