--- a/src/Assets/scss/_variables.scss
+++ b/src/Assets/scss/_variables.scss
@@ -6,6 +6,9 @@ $black: #303345;
 $green: #02AAB0;
 $button-green-grad: linear-gradient(90deg, #02ACB0 0%, #00C8AC 100%);
 
+$dm_ff: "DM Sans", sans-serif;
+
+
 @mixin media($minmax, $media) {
   @each $size, $resolution in $sizes {
     @if $media == $size {
