--- a/src/Assets/scss/main.scss
+++ b/src/Assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import "nav";
 @import "connect";
 @import "dashboard";
+@import "bg";
 
 body, body > * {
   font-family: "Montserrat", sans-serif;
@@ -15,6 +16,10 @@ body, body > * {
   & > * {
     margin: auto;
   }
+}
+
+#root{
+  overflow: hidden;
 }
 
 .btn-outline-primary {
