--- a/src/Assets/scss/_connect.scss
+++ b/src/Assets/scss/_connect.scss
@@ -29,14 +29,23 @@
 
     & .buttons {
       margin-top: 3.5rem;
+      z-index: 10;
 
       & button {
-        padding: 10px;
-        width: auto;
+        @include style_text(16px, 26px);
+        font-weight: 600;
+        font-family: $poppins_ff;
+        padding: 0;
+        height: 56px;
         font-size: 1.1em;
 
         &.plug {
           margin-right: 1.5em;
+          width: 185px;
+        }
+
+        &.stoic {
+          width: 207px;
         }
 
         & img {
