--- a/src/Assets/scss/_variables.scss
+++ b/src/Assets/scss/_variables.scss
@@ -7,6 +7,7 @@ $green: #02AAB0;
 $button-green-grad: linear-gradient(90deg, #02ACB0 0%, #00C8AC 100%);
 
 $dm_ff: "DM Sans", sans-serif;
+$poppins_ff: "Poppins", sans-serif;
 
 
 @mixin media($minmax, $media) {
