style for dashboard

--- a/src/Assets/scss/_variables.scss
+++ b/src/Assets/scss/_variables.scss
@@ -8,6 +8,8 @@ $button-green-grad: linear-gradient(90deg, #02ACB0 0%, #00C8AC 100%);
 
 $dm_ff: "DM Sans", sans-serif;
 $poppins_ff: "Poppins", sans-serif;
+$lato_ff: "Lato", sans-serif;
+$roboto_ff: "Roboto", sans-serif;
 
 
 @mixin media($minmax, $media) {
