--- a/src/Assets/scss/_bg.scss
+++ b/src/Assets/scss/_bg.scss
@@ -2,3 +2,7 @@
   background-color: rgba(217, 224, 236, 0.2);
   margin-top: 15rem;
 }
+
+.dashboard-bg{
+  background-color: rgba(217, 224, 236, 0.2);
+}
