--- a/src/Assets/scss/_dashboard.scss
+++ b/src/Assets/scss/_dashboard.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 #info_dash {
-  margin-top: 30px;
+  padding-top: 30px;
 
   .cards_section {
     margin-top: 2em;
@@ -11,68 +11,75 @@
       display: flex;
 
       .card {
+        font-family: $lato_ff;
         width: 100%;
-        margin-left: 20px;
+        margin-left: 28px;
         margin-top: 20px;
+        filter: drop-shadow(0px -11.6375px 37.3625px rgba(0, 0, 0, 0.03));
+        background: $white;
+        border: 0.5px solid #F6F6FB;
+        padding: 20px 24px;
+        border-radius: 10px;
+        text-align: left;
 
-        .card-header {
-          border-radius: 0;
-          font-weight: bold;
-          font-size: 1.2em;
-        }
+        & .card-body {
+          display: flex;
+          justify-content: space-between;
+          padding: 0;
+          font-family: $lato_ff;
 
-        .card-text {
-          margin-top: 1em;
+          .card_title {
+            @include style_text(14px, 21px);
+            font-weight: 400;
+          }
+
+          .card_description {
+            @include style_text(20px, 32px);
+            font-weight: 700;
+
+            & .icp_text {
+              @include style_text(14px, 21px);
+              font-weight: 400;
+              color: #8181A5
+            }
+          }
+
+          .img {
+            display: flex;
+            width: 56px;
+            height: 56px;
+            background: linear-gradient(0deg, rgba(150, 152, 214, 0.1), rgba(150, 152, 214, 0.1)), #FFFFFF;
+            border-radius: 10px;
+
+            .img_svg {
+              margin: auto;
+            }
+
+            .img_png {
+              margin: auto;
+              position: relative;
+              width: 25px;
+              height: 25px;
+
+              img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                margin: 0 auto;
+                object-fit: cover;
+                display: block;
+              }
+            }
+          }
+
         }
 
         &:first-child {
           margin-left: 0;
         }
 
-        //for ntf card
-        &.ntf_card {
-          text-align: center;
-
-          p {
-            font-size: 30px;
-          }
-        }
-
-        & .card-body {
-          display: flex;
-          flex-direction: column;
-        }
-
-        &.icp_card {
-          text-align: center;
-
-          p {
-            width: 100%;
-            margin: auto;
-            position: relative;
-            display: flex;
-            justify-content: center;
-
-            & .price {
-              font-size: 30px;
-            }
-
-            & .change {
-              position: absolute;
-              bottom: 0;
-              right: 0;
-              font-size: 15px;
-
-              &.up {
-                color: green;
-              }
-
-              &.down {
-                color: red;
-              }
-            }
-          }
-        }
       }
 
       @include media('max', 'lg') {
@@ -95,24 +102,51 @@
   }
 
   .discord_section {
+    margin-top: 2rem;
 
     &.hidden {
       display: none;
     }
 
     .discord_inner {
-      text-align: center;
       padding-bottom: 30px;
 
       .discord_text {
+        font-family: $dm_ff;
+        @include style_text(24px, 35px);
+        font-weight: 700;
         margin-top: 1.7em;
-        font-size: 1.5em;
-        padding: 0 10px;
+        margin-right: 2rem;
+
+        span {
+          color: #B1B5C3;
+        }
       }
 
       .discord_href {
-        font-size: 1.2em;
-        margin-top: 1.5em;
+        padding-left: 1rem;
+
+        span {
+          @include style_text(14px, 24px);
+          font-family: $dm_ff;
+          font-weight: 500;
+          color: $green;
+          margin: auto 1rem auto 0;
+        }
+
+        .discord_href_svg {
+          cursor: pointer;
+
+          path {
+            transition: fill .2s linear;
+          }
+
+          &:hover {
+            path {
+              fill: $green;
+            }
+          }
+        }
       }
     }
 
@@ -121,7 +155,7 @@
       flex-direction: column;
 
       & > div {
-        margin: auto;
+        margin-left: 10rem;
       }
 
       .input_inner {
@@ -130,8 +164,8 @@
 
           .form-control {
             padding: 17px 14px;
-            
-            &.discriminator{
+
+            &.discriminator {
               width: 100px;
             }
           }
@@ -141,14 +175,15 @@
 
       .btn_inner {
         & > div {
-          display: flex;
-          justify-content: center;
 
           & > button {
+            font-family: $poppins_ff;
+            font-weight: 600;
+            text-transform: none;
+            @include style_text(16px, 26px);
             justify-content: center;
-            font-size: 1.1em;
-            height: 50px;
-            width: 150px;
+            height: 40px;
+            width: 139px;
           }
         }
       }
@@ -160,21 +195,29 @@
 #pagination {
 
   .page-item {
+    border: 1px solid #EBECEC;
+    height: 36px;
+    min-width: 36px;
+    border-left: none;
 
     .page-link {
-      border-radius: 13px;
-      height: 26px;
-      margin: 0 1px;
-      min-width: 26px;
-      font-size: 0.875rem;
-      border: none;
-      color: rgba(0, 0, 0, 0.87);
+      display: flex;
+      width: 100%;
+      height: 100%;
+      padding: 0;
+      border: 0;
+      margin: 0;
+      @include style_text(14px, 24px);
+      font-family: $roboto_ff;
+      font-weight: normal;
+      color: $green;
       background-color: transparent;
-      box-sizing: border-box;
-      text-align: center;
-      font-weight: 400;
-      line-height: 1.8;
-      padding: 0 4px;
+      align-items: center;
+      justify-content: center;
+
+      & span {
+        margin: auto;
+      }
 
       &:hover {
         background-color: rgba(0, 0, 0, 0.04);
@@ -184,11 +227,41 @@
         background-color: transparent;
         box-shadow: none;
       }
+
+    }
+
+    &.prev {
+      border-left: 1px solid #EBECEC;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+    }
+
+    &.next {
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+    }
+
+    &.first, &.last {
+      border-left: 1px solid #EBECEC;
+      border-radius: 4px;
+
+      & .page-link {
+        padding: 0 1.5rem;
+      }
+    }
+
+    &.first {
+      margin-right: 1rem;
+    }
+
+    &.last {
+      margin-left: 1rem;
     }
 
     &.active {
       .page-link {
-        background-color: rgba(0, 0, 0, 0.08);
+        background-color: $green;
+        color: $white;
       }
     }
   }
@@ -205,9 +278,8 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 10px;
-    border-radius: 3px;
-    border: 1px solid rgba(0, 0, 0, 0.08);
+    height: 1px;
+    background-color: #EFEFEF;
   }
 
   .cards_inner {
@@ -218,8 +290,7 @@
 
     .card_href {
       margin-top: 4em;
-      width: 350px;
-      height: 350px;
+      text-decoration: none;
 
       &.hidden {
         pointer-events: none;
@@ -227,55 +298,117 @@
       }
 
       .card {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        padding: 0;
+        padding: 1rem 1.2rem;
 
-        & .token_id {
-          position: absolute;
-          top: 5px;
-          left: 10px;
-          font-size: 15px;
-          color: gray;
-        }
-
-        & .card-img-top {
-          border-radius: 100%;
-          width: 12rem;
-          margin: auto;
-        }
-
-        & .info_card {
+        & .top_info {
           display: flex;
-          width: 120px;
-          height: 50px;
-          position: absolute;
-          top: -20px;
-          right: -20px;
-          z-index: 99;
-          color: white;
-          border-radius: 10px;
+          justify-content: space-between;
+          align-items: center;
 
-
-          &.green {
-            background-color: #00b894;
+          & .token_id {
+            font-family: $dm_ff;
+            font-weight: 500;
+            @include style_text(14px, 18px);
+            color: black;
           }
 
-          &.blue {
-            background-color: blue;
+          & .info_card {
+            @include style_text(12px, 12px);
+            font-family: $poppins_ff;
+            font-weight: 700;
+            display: flex;
+            width: 88px;
+            height: 26px;
+
+            color: white;
+            border-radius: 4px;
+
+
+            &.green {
+              background-color: #00b894;
+            }
+
+            &.purple {
+              background-color: #FA448C;
+            }
+
+            &.yellow {
+              background-color: #FEC859;
+            }
+
+            &.blue {
+              background-color: blue;
+            }
+
+            & span {
+              margin: auto;
+            }
+          }
+        }
+
+
+        & .card_top {
+          margin: 1rem auto;
+          position: relative;
+          width: 277px;
+          height: 239px;
+
+          img {
+            border-radius: 10px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+            object-fit: cover;
+            display: block;
+          }
+        }
+
+        & .description {
+          display: flex;
+
+          .listed, .delisted {
+            @include style_text(12px, 12px);
+            font-family: $dm_ff;
+            display: flex;
+            align-items: center;
+            font-weight: bold;
+            height: 26px;
+            padding: 0 .5rem;
+            border-radius: 4px;
+            border: 1.58px solid;
+            text-transform: uppercase;
           }
 
-          & span {
-            margin: auto;
+          .listed {
+            margin-right: 10px;
+            border-color: #FEC859;
+            color: #FEC859;
+
+            &.active {
+              color: $white;
+              background-color: #FEC859;
+            }
+          }
+
+          .delisted {
+            border-color: #45B26B;
+            color: #45B26B;
+
+            &.active {
+              color: $white;
+              background-color: #45B26B;
+            }
+            
           }
         }
 
       }
 
       @include media('max', 'xl') {
-        width: 285px;
-        height: 285px;
+
       }
 
       @include media('max', 'lg') {
@@ -285,29 +418,21 @@
       }
 
       @include media('max', 'md') {
-        width: 230px;
-        height: 230px;
+
 
         .card .card-img-top {
-          width: 8rem;
+
         }
       }
 
       @include media('max', 'sm') {
         width: 100%;
         height: 300px;
-
-        .card .info_card {
-          width: 130px !important;
-          height: 50px !important;
-          top: -10px !important;
-          right: -10px !important;
-        }
       }
 
       @include media('max', 'xs') {
         .card-img-top {
-          width: 5rem;
+
         }
       }
     }
