--- a/src/Assets/scss/main.scss
+++ b/src/Assets/scss/main.scss
@@ -9,6 +9,10 @@ body, body > * {
   background-color: $white;
 }
 
+body > iframe{
+  display: none;
+}
+
 .btn {
   display: flex;
   align-items: center;
