--- a/src/Assets/scss/_bg.scss
+++ b/src/Assets/scss/_bg.scss
@@ -1,8 +1,3 @@
-.benefits_block-bg {
-  background-color: rgba(217, 224, 236, 0.2);
-  margin-top: 15rem;
-}
-
-.dashboard-bg{
-  background-color: rgba(217, 224, 236, 0.2);
+.info_block_bg{
+  background-color: #FFFFFF;
 }
