--- a/src/Assets/scss/_connect.scss
+++ b/src/Assets/scss/_connect.scss
@@ -2,7 +2,8 @@
 
 #info_block {
   position: relative;
-  margin-top: 7rem;
+  padding-top: 7rem;
+  padding-bottom: 15rem;
 
   & .info_section {
     position: relative;
@@ -282,8 +283,15 @@
   & .big_filter {
     width: 738px !important;
     position: absolute;
-    bottom: -60%;
+    bottom: -27%; 
     right: -10%;
+    z-index: 1;
+  }
+
+  & .circle_filter {
+    position: absolute;
+    bottom: 37%;
+    right: -37%;
     z-index: 1;
   }
 }
