--- a/src/Assets/scss/_dashboard.scss
+++ b/src/Assets/scss/_dashboard.scss
@@ -286,10 +286,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: -2em;
+    margin-top: -2rem;
 
     .card_href {
-      margin-top: 4em;
+      margin-top: 2rem;
       text-decoration: none;
 
       &.hidden {
@@ -427,7 +427,6 @@
 
       @include media('max', 'sm') {
         width: 100%;
-        height: 300px;
       }
 
       @include media('max', 'xs') {
